--- a/src/app/step/pages/registration.component.html
+++ b/src/app/step/pages/registration.component.html
@@ -64,11 +64,11 @@
                                 <td class="form-group" [class.has-error]="password.invalid && password.touched"
                                     [class.text-success]="password.valid">
                                     <input [(ngModel)]="registration.password" class="form-control" id="password"
-                                        name="password" type="password" placeholder="Enter Your Password"
-                                        #password="ngModel" required />
+                                        name="password" type="password" placeholder="Enter Strong Password"
+                                        #password="ngModel" [pattern]="passwordpattern" minlength="8" maxlength="12" required />
                                     <span class="help-block red-text"
-                                        *ngIf="password.invalid && password.touched">Password is required</span>
-                                </td>
+                                        *ngIf="password.invalid && password.touched">Strong Password is required</span>
+                                                    </td>
                             </tr>
                             <tr>
                                 <th> ConfirmPassword <span class="text-danger">*</span></th>
